<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/log"
    tools:context=".EditProfile">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/editdelivery"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etUserNameEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="39dp">

        <Button
            android:id="@+id/btnSearchEP"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_button"
            android:padding="6dp"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/etPhoneEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/etAddressEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/address" />

    <EditText
        android:id="@+id/etContactNoEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/contactno" />

    <EditText
        android:id="@+id/etEmailEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email" />

    <TextView
        android:id="@+id/etGenderEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/etPasswordEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <Button
            android:id="@+id/btnEditEP"
            android:layout_width="160dp"
            android:layout_height="39dp"
            android:background="@drawable/rounded_button"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307" />

        <Button
            android:id="@+id/btnDeleteEP"
            android:layout_width="170dp"
            android:layout_height="38dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_button"
            android:padding="6dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.333" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>