<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hm"
    tools:context=".CustomerProfile">

    <Button
        android:id="@+id/btnmenueMA"
        android:layout_width="373dp"
        android:layout_height="59dp"

        android:background="@drawable/roundbtn"
        android:drawableLeft="@drawable/ic_baseline_fastfood_24"
        android:drawablePadding="0dp"
        android:fontFamily="serif"
        android:padding="6dp"
        android:text="@string/menue_1"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <Button
        android:id="@+id/btnmyordersMA"
        android:layout_width="375dp"
        android:layout_height="54dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/roundbtn"
        android:drawableLeft="@drawable/ic_baseline_assignment_24"
        android:fontFamily="serif"
        android:padding="6dp"
        android:text="@string/my_orders"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <Button
        android:id="@+id/btnfeedbkMA"
        android:layout_width="379dp"
        android:layout_height="57dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/roundbtn"
        android:drawableLeft="@drawable/ic_baseline_insert_comment_24"
        android:fontFamily="serif"
        android:padding="6dp"
        android:text="@string/feedback"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <Button
        android:id="@+id/btnhelpMA"
        android:layout_width="377dp"
        android:layout_height="57dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/roundbtn"
        android:drawableLeft="@drawable/ic_baseline_settings_24"
        android:fontFamily="serif"
        android:padding="6dp"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <Button
        android:id="@+id/btnmanageproMA"
        android:layout_width="380dp"
        android:layout_height="54dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/roundbtn"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:fontFamily="serif"
        android:padding="6dp"
        android:text="@string/manage_prof"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <Button
        android:id="@+id/btnlogoutMA"
        android:layout_width="380dp"
        android:layout_height="51dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/roundbtn"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:fontFamily="serif"
        android:padding="6dp"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="403dp"
        android:layout_height="66dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/myaccount"
        android:text="My Account"
        android:textColor="#A3972A"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />
</androidx.constraintlayout.widget.ConstraintLayout>