<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hme2"
    android:orientation="vertical"
    tools:context=".Home">

    <EditText
        android:id="@+id/etUserNameH"
        android:layout_width="392dp"
        android:layout_height="54dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="#A3972A"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364"
        tools:layout_conversion_absoluteHeight="53dp"
        tools:layout_conversion_absoluteWidth="392dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="429dp"
        android:layout_height="91dp"
        android:background="#038393"
        android:fontFamily="serif"
        android:gravity="center_horizontal|fill_vertical"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="#F8F7F4"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="392dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_conversion_absoluteHeight="88dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="214dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnRegisterH"
        android:layout_width="178dp"
        android:layout_height="45dp"

        android:background="@drawable/roundbtn"
        android:fontFamily="serif"
        android:padding="6dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/btnLoginH"
        android:layout_width="173dp"
        android:layout_height="45dp"

        android:background="@drawable/roundbtn"
        android:fontFamily="serif"
        android:padding="6dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <EditText
        android:id="@+id/etPasseordH"
        android:layout_width="351dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#A3972A"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="252dp"
        android:layout_height="63dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="Please Enter Your Validate Credentials !"
        android:textColor="#A3972A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="230dp"
        android:layout_height="63dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="Don't Have an Account ? Signup Here..."
        android:textColor="#A3972A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />


</androidx.constraintlayout.widget.ConstraintLayout>